exports[`KDReportComponent should display correctly 1`] = `
<div>
  <main>
    <Panel
      bsClass="panel"
      bsStyle="default"
      defaultExpanded={false}>
      <Grid
        bsClass="container"
        componentClass="div"
        fluid={false}>
        <Row
          bsClass="row"
          className="row-centered"
          componentClass="div">
          <PageHeader
            bsClass="page-header">
            Report - Security assessment of collections
          </PageHeader>
          <Table
            bordered={false}
            bsClass="table"
            condensed={false}
            hover={false}
            responsive={false}
            striped={false}
            style={
              Object {
                "width": 700
              }
            }>
            <tbody>
              <tr>
                <td>
                  Total area:
                </td>
                <td>
                  1,23
                   m²
                </td>
              </tr>
              <tr>
                <td>
                  Perimeter security:
                </td>
                <td>
                  23,34
                   m²
                </td>
              </tr>
              <tr>
                <td>
                  Theft protection:
                </td>
                <td>
                  234,2
                   m²
                </td>
              </tr>
              <tr>
                <td>
                  Fire protection:
                </td>
                <td>
                  34,3
                   m²
                </td>
              </tr>
              <tr>
                <td>
                  Water damage assessment:
                </td>
                <td>
                  234,3
                   m²
                </td>
              </tr>
              <tr>
                <td>
                  Routines and contingency plan:
                </td>
                <td>
                  2334,3
                   m²
                </td>
              </tr>
            </tbody>
          </Table>
        </Row>
      </Grid>
    </Panel>
  </main>
</div>
`;

exports[`Reports overview should display correctly 1`] = `
<div>
  <main>
    <Panel
      bsClass="panel"
      bsStyle="default"
      defaultExpanded={false}>
      <Grid
        bsClass="container"
        componentClass="div"
        fluid={false}>
        <Row
          bsClass="row"
          className="row-centered"
          componentClass="div">
          <PageHeader
            bsClass="page-header">
            Reports
          </PageHeader>
          <Table
            bordered={false}
            bsClass="table"
            condensed={false}
            hover={false}
            responsive={false}
            striped={false}>
            <thead>
              <tr>
                <th>
                  Title
                </th>
                <th>
                  Description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                id={undefined}>
                <td>
                  <a
                    href="/#/reports/kdreport">
                    Security assessment of collections
                  </a>
                </td>
                <td>
                  Security assessment indicators reported to KD.
                </td>
              </tr>
            </tbody>
          </Table>
        </Row>
      </Grid>
    </Panel>
  </main>
</div>
`;
